added wedding events, nav fix

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ animated welcome svg
 			<ul>
 				<li><a href="#anchor-1" onclick="smoothScroll('anchor-1');">Home</a></li>
 				<li><a href="#anchor-2" onclick="smoothScroll('anchor-2');">Wedding Information</a></li>
+				<li><a href="#anchor-8" onclick="smoothScroll('anchor-8');">Wedding Events</a></li>
 				<li><a href="#anchor-3" onclick="smoothScroll('anchor-3');">Accomodations</a></li>
 				<li><a href="#anchor-4" onclick="smoothScroll('anchor-4');">Travel</a></li>
 				<li><a href="#anchor-5" onclick="smoothScroll('anchor-5');">Activities</a></li>
@@ -50,7 +51,7 @@ animated welcome svg
 <!-- end super duper badass animating text -->
 
 <!-- sort of baller RSVP button -->
-<!-- <a href="https://kovatfirstsight.anrsvp.com" target="blank" class="action-button shadow datPurp animated fadeIn">RSVP</a> -->
+<a href="https://kovatfirstsight.anrsvp.com" target="blank" class="action-button shadow datPurp animated fadeIn">RSVP</a>
 <!-- end RSVP button -->
 
 <!-- scroll down -->
@@ -93,64 +94,79 @@ Wedding information
 		</div>
 
 
-		<div class="row space panel">
-			<div class="col col-span-5">
-				<div class="weddingText">
-				<h1>Welcome Dessert</h1>
-				<hr align="right" width="70%">
-					<p>
-						<strong>Date:</strong> Saturday, October 21st<br>
-						<strong>Location:</strong> Hampton Inn & Suites<br>
-						<strong>Time:</strong> 8:00pm<br>
-
-
-				<nav class="cl-effect-8">
-					<a href="http://hamptoninn3.hilton.com/en/hotels/north-carolina/hampton-inn-and-suites-wilmington-wrightsville-beach-ILMWVHX/index.html" target="blank">link to site</a>
-					<a href="https://www.google.com/maps/dir//Hampton+Inn+%26+Suites+Wilmington%2FWrightsville+Beach,+1989+Eastwood+Rd,+Wilmington,+NC+28403/@34.2234156,-77.8194701,15z/data=!4m15!1m6!3m5!1s0x0:0x6310b8abdf12d9f1!2sHampton+Inn+%26+Suites+Wilmington%2FWrightsville+Beach!8m2!3d34.2234156!4d-77.8194701!4m7!1m0!1m5!1m1!1s0x89a9f36e66a75773:0x6310b8abdf12d9f1!2m2!1d-77.8194701!2d34.2234156" target="blank">link to directions</a>
-				</nav>
-				</p>
-				</div>
-			</div>
-
-			<div class="col col-span-6">
-				<div class="venueImg">
-					<img src="img/Dessert.jpg">
-				</div>
-			</div>
-
-		</div>
-
-
-		<div class="row space panel">
-			<div class="col col-span-5">
-				<div class="weddingText">
-					<h1>Brunch</h1>
-					<hr align="right" width="70%">
-						<p>
-							<strong> Date:</strong> Monday, October 23rd <br>
-							<strong> Location:</strong> Famous Toastery<br>
-							<strong> Time:</strong> Morning - To be determined <br>
-
-				<nav class="cl-effect-8">
-					<a href="http://www.famoustoastery.com/" target="blank">link to site</a>
-					<a href="https://www.google.com/maps/dir//Famous+Toastery+of+Wilmington,+6722+Wrightsville+Ave,+Wilmington,+NC+28403/@34.2202005,-77.8282029,15z/data=!4m15!1m6!3m5!1s0x0:0x591a49e986623577!2sFamous+Toastery+of+Wilmington!8m2!3d34.2202005!4d-77.8282029!4m7!1m0!1m5!1m1!1s0x89a9f37b279a9ea3:0x591a49e986623577!2m2!1d-77.8282029!2d34.2202005" target="blank">link to directions</a>
-				</nav>
-				</p>
-				</div>
-			</div>
-
-			<div class="col col-span-6">
-				<div class="venueImg">
-					<img src="img/Brunch.jpg">
-				</div>
-			</div>
-
-		</div>
-
-
-<a href="#anchor-3" onclick="smoothScroll('anchor-3');"><i id="anchor-2" class="fa fa-angle-double-down animated bounce"></i></a>
+<a href="#anchor-8" onclick="smoothScroll('anchor-3');"><i id="anchor-2" class="fa fa-angle-double-down animated bounce"></i></a>
 
 	</div>
+
+
+
+	<!--
+	=====================
+	Events
+	=====================
+	-->
+		<div id="anchor-8" class="section-five image">
+			<h1 class="noPanelTitle">Wedding Events</h1>
+
+<!-- Start desssert -->
+			<div class="row space panel">
+				<div class="col col-span-5">
+					<div class="weddingText">
+					<h1>Welcome Dessert</h1>
+					<hr align="right" width="70%">
+						<p>
+							<strong>Date:</strong> Saturday, October 21st<br>
+							<strong>Location:</strong> Hampton Inn & Suites<br>
+							<strong>Time:</strong> 8:00pm - 10:00pm<br>
+
+
+					<nav class="cl-effect-8">
+						<a href="http://hamptoninn3.hilton.com/en/hotels/north-carolina/hampton-inn-and-suites-wilmington-wrightsville-beach-ILMWVHX/index.html" target="blank">link to site</a>
+						<a href="https://www.google.com/maps/dir//Hampton+Inn+%26+Suites+Wilmington%2FWrightsville+Beach,+1989+Eastwood+Rd,+Wilmington,+NC+28403/@34.2234156,-77.8194701,15z/data=!4m15!1m6!3m5!1s0x0:0x6310b8abdf12d9f1!2sHampton+Inn+%26+Suites+Wilmington%2FWrightsville+Beach!8m2!3d34.2234156!4d-77.8194701!4m7!1m0!1m5!1m1!1s0x89a9f36e66a75773:0x6310b8abdf12d9f1!2m2!1d-77.8194701!2d34.2234156" target="blank">link to directions</a>
+					</nav>
+					</p>
+					</div>
+				</div>
+
+				<div class="col col-span-6">
+					<div class="venueImg">
+						<img src="img/Dessert.jpg">
+					</div>
+				</div>
+
+			</div>
+
+<!-- Start Brunch -->
+			<div class="row space panel">
+				<div class="col col-span-5">
+					<div class="weddingText">
+						<h1>Brunch</h1>
+						<hr align="right" width="70%">
+							<p>
+								<strong> Date:</strong> Monday, October 23rd <br>
+								<strong> Location:</strong> Sweet n Savory<br>
+								<strong> Time:</strong> 8:30am - 11:00am <br>
+
+					<nav class="cl-effect-8">
+						<a href="https://www.sweetnsavory.cafe/" target="blank">link to site</a>
+						<a href="https://www.google.com/maps/dir/''/sweet+n+savory/@34.2215411,-77.8900151,12z/data=!3m1!4b1!4m8!4m7!1m0!1m5!1m1!1s0x89a9f36e0bc666b3:0x566a4304e89c764!2m2!1d-77.819975!2d34.221561" target="blank">link to directions</a>
+					</nav>
+					</p>
+					</div>
+				</div>
+
+				<div class="col col-span-6">
+					<div class="venueImg">
+						<img src="img/Brunch.jpg">
+					</div>
+				</div>
+
+			</div>
+
+					<a href="#anchor-3" onclick="smoothScroll('anchor-6');"><i id="anchor-3" class="fa fa-angle-double-down pink animated bounce"></i></a>
+		</div>
+
+
 <!--
 =====================
 Hotels
@@ -160,102 +176,138 @@ Hotels
 		<h1 class="noPanelTitle">Accomodations</h1>
 		<!-- <hr align="center" width="80%"> bug were it was showing over the sidebar -->
 
-		<div class="row space panel">
-			<div class="col col-span-5">
-				<img src="img/hampton.jpg" class="hotelImgOne">
-			</div>
-			<div class="col col-span-6">
-				<p class="hotelText">
-				<strong>Hampton Inn & Suites Wilmington/Wrightsville Beach</strong> <br>
-				$104 and up<br>
-				1989 Eastwood Road, Wilmington, NC 28403<br>
-				910-256-9600 <br>
+		<!-- Start first hotel Hampton Inn & Suites Wilmington/Wrightsville Beach  -->
+	<div class="row space panel">
+		<div class="col col-span-5">
+			<img src="img/hampton.jpg" class="hotelImgOne">
+		</div>
+		<div class="col col-span-6">
+			<p class="hotelText">
+				<strong>Hampton Inn & Suites Wilmington/Wrightsville Beach</strong> <br> $104 and up<br> 1989 Eastwood Road, Wilmington, NC 28403<br> 910-256-9600 <br>
 				<nav class="cl-effect-8">
-					<a href="http://hamptoninn.hilton.com/en/hp/groups/personalized/I/ILMWVHX-SKW-20171020/index.jhtml?WT.mc_id=POG" target="blank">link to site</a>
+					<a href="http://hamptoninn.hilton.com/en/hp/groups/personalized/I/ILMWVHX-SKW-20171020/index.jhtml?WT.mc_id=POG" target="blank">Book a room</a>
 					<a href="https://www.google.com/maps/dir//1989+Eastwood+Rd,+Wilmington,+NC+28403/@34.2234643,-77.82176,17z/data=!3m1!4b1!4m8!4m7!1m0!1m5!1m1!1s0x89a9f36e66a75773:0x2d810d1165ae3d06!2m2!1d-77.8195713!2d34.2234599" target="blank">link to directions</a>
 					<a href="#modal-one">More Info</a>
 
-			<!-- Modal -->
-			<div class="modal" id="modal-one" aria-hidden="true">
-				<div class="modal-dialog">
-					<div class="modal-header">
-						<h2>Hampton Inn & Suites Wilmington/Wrightsville Beach</h2>
-						<p><b>1989 Eastwood Road, Wilmington, NC 28403</b></p>
-						<p><b>910-256-9600</b></p>
-						<a href="#anchor-3" class="btn-close" aria-hidden="true">×</a>
-					</div>
-					<div class="modal-body">
-						<p>Room Rates: <br />
-						King Guest Rooms (weeknights - Sunday) $104<br />
-						Double/Double Guest Rooms (weeknights - Sunday) $109<br />
-						King Guest Rooms (Weekend nights - Friday-Saturday) $139<br />
-						Double/Double Guest Rooms (Weekend nights - Friday-Saturday) $149</p>
-						<p>To make a reservation: Call <b>910-256-9600</b> and request the Smith/Kalmykov Wedding group block.</a><br />
-						<p>The special room rate will be available until September 22nd or until the group block is sold-out, whichever comes first. <br />
-						<!-- <p>It's a 10 minute walk to Wrightsville Manor or a 4 minute drive. Walking distance to lots of restaurants at Lumina Station and a 7 min. drive to shopping and restaurants at Mayfaire Towne Center. 4 min to Wrightsville Beach<br /> -->
-					</div>
-					<div class="modal-footer">
-						<a href="#anchor-3" class="btn backModal">back</a>
-					</div>
-				</div>
-				<!-- end Modal -->
+					<!-- Modal -->
+					<div class="modal" id="modal-one" aria-hidden="true">
+						<div class="modal-dialog">
+							<div class="modal-header">
+								<h2>Hampton Inn & Suites Wilmington/Wrightsville Beach</h2>
+								<p><b>1989 Eastwood Road, Wilmington, NC 28403</b></p>
+								<p><b>910-256-9600</b></p>
+								<a href="#anchor-3" class="btn-close" aria-hidden="true">×</a>
+							</div>
+							<div class="modal-body">
+								<p>Room Rates: <br /> King Guest Rooms (weeknights - Sunday) $104<br /> Double/Double Guest Rooms (weeknights - Sunday) $109<br /> King Guest Rooms (Weekend nights - Friday-Saturday) $139<br /> Double/Double Guest Rooms (Weekend nights - Friday-Saturday)
+									$149</p>
+								<p>To make a reservation: Call <b>910-256-9600</b> and request the Smith/Kalmykov Wedding group block.</a><br />
+									<p>The special room rate will be available until September 22nd or until the group block is sold-out, whichever comes first. <br />
+										<!-- <p>It's a 10 minute walk to Wrightsville Manor or a 4 minute drive. Walking distance to lots of restaurants at Lumina Station and a 7 min. drive to shopping and restaurants at Mayfaire Towne Center. 4 min to Wrightsville Beach<br /> -->
+							</div>
+							<div class="modal-footer">
+								<a href="#anchor-3" class="btn backModal">back</a>
+							</div>
+						</div>
+						<!-- end Modal -->
 
 				</nav>
+				<!-- </p> -->
+				</div>
+		</div>
+	<!-- end first hotel Hampton Inn & Suites Wilmington/Wrightsville Beach -->
+
+	<!-- Start second hotel Hilton Garden Inn Mayfaire Town Center -->
+	<div class="row space panel add">
+		<div class="col col-span-5">
+
+			<img src="img/hilton.jpg" class="hotelImgOne">
+		</div>
+		<div class="col col-span-6">
+			<p class="hotelText">
+				<strong>Hilton Garden Inn Mayfaire Town Center</strong> <br> $139 (2 night minimum) <br> 6745 Rock Spring Road, Wilmington, NC 28405<br> 910-509-4046 <br>
+				<nav class="cl-effect-8">
+					<a href="http://hiltongardeninn.hilton.com/en/gi/groups/personalized/I/ILMTCGI-SMITH-20171020/index.jhtml?WT.mc_id=POG" target="blank">Book a room</a>
+					<a href="https://www.google.com/maps/place/6745+Rock+Spring+Rd,+Wilmington,+NC+28405/@34.2374163,-77.8348776,17z/data=!3m1!4b1!4m5!3m4!1s0x89a9f35ec919904d:0x5d558a8aad873838!8m2!3d34.2374119!4d-77.8326889" target="blank">link to directions</a>
+					<a href="#modal-two">More Info</a>
+					<!-- Modal -->
+					<div class="modal" id="modal-two" aria-hidden="true">
+						<div class="modal-dialog">
+							<div class="modal-header">
+								<h2> Hilton Garden Inn Mayfaire Town Center</h2>
+								<p><b>6745 Rock Spring Road, Wilmington, NC 28405</b></p>
+								<p><b>910-509-4046</b></p>
+								<a href="#anchor-3" class="btn-close" aria-hidden="true">×</a>
+							</div>
+							<div class="modal-body">
+								<p>Room Rates: <br /> $139 (2 night minimum)</p>
+
+								<p> To make a reservation: Call 910-509-4046 and request the Smith-Kalmykov Wedding group block.<br />
+									<p> The special room rate will be available until September 20th or until the group block is sold-out, whichever comes first.<br />
+										<!-- <p>It's a 6 minute drive to Wrightsville Manor. Walking distance to lots of restaurants and shopping at Mayfaire Towne Center. 8 minute drive to Wrightsville Beach. <br /> -->
+							</div>
+							<div class="modal-footer">
+								<a href="#anchor-3" class="btn backModal">back</a>
+							</div>
+						</div>
+						<!-- end Modal -->
+
+				</nav>
+				<!-- </p> -->
+				</div>
+
+				</nav>
+				</p>
+		</div>
+<!-- END second hotel Hilton Garden Inn Mayfaire Town Center -->
+
+
+<!-- Start third hotel SpringHill Suites by Marriott Wilmington Mayfaire -->
+<div class="row space panel add">
+	<div class="col col-span-5">
+
+		<img src="img/SpringHillSuites.jpg" class="hotelImgOne">
+	</div>
+	<div class="col col-span-6">
+		<p class="hotelText">
+			<strong>SpringHill Suites by Marriott Wilmington Mayfaire</strong> <br> $139 per night <br> 1014 Ashes Dr, Wilmington, NC 28405<br> 910-239-9975 <br>
+			<nav class="cl-effect-8">
+				<a href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Smith-Kalmykov%20Wedding%20Block%5EILMSH%60SKWSKWA%7CSKWSKWB%60139.00%60USD%60false%604%6010/20/17%6010/24/17%609/20/17&app=resvlink&stop_mobi=yes" target="blank">Book a room</a>
+				<a href="https://www.google.com/maps/dir/''/SpringHill+Suites+Wilmington+Mayfaire/data=!4m5!4m4!1m0!1m2!1m1!1s0x89a9f35ad6cac7df:0x46cd864518ed4d9c?sa=X&ved=0ahUKEwiD1Lii747VAhUENSYKHeH0AmMQ9RcInQEwCw" target="blank">link to directions</a>
+				<a href="#modal-three">More Info</a>
+				<!-- Modal -->
+				<div class="modal" id="modal-three" aria-hidden="true">
+					<div class="modal-dialog">
+						<div class="modal-header">
+							<h2> SpringHill Suites by Marriott Wilmington Mayfaire</h2>
+							<p><b>1014 Ashes Dr, Wilmington, NC 28405</b></p>
+							<p><b>910-239-9975</b></p>
+							<a href="#anchor-3" class="btn-close" aria-hidden="true">×</a>
+						</div>
+						<div class="modal-body">
+							<p>Room Rates: <br /> $139</p>
+
+							<p> To make a reservation: Call 910-239-9975 and request the Smith-Kalmykov Wedding group block. Reference code: SKWS<br />
+								<p> The special room rate will be available until September 20th or until the group block is sold-out, whichever comes first.<br />
+									<!-- <p>It's a 6 minute drive to Wrightsville Manor. Walking distance to lots of restaurants and shopping at Mayfaire Towne Center. 8 minute drive to Wrightsville Beach. <br /> -->
+						</div>
+						<div class="modal-footer">
+							<a href="#anchor-3" class="btn backModal">back</a>
+						</div>
+					</div>
+					<!-- end Modal -->
+
+			</nav>
 			<!-- </p> -->
 			</div>
 
-			</div>
+			</nav>
+			</p>
+	</div>
+	<a href="#anchor-4" onclick="smoothScroll('anchor-4');"><i id="anchor-3" class="fa fa-angle-double-down animated bounce"></i></a>
 
-			<div class="row space panel add">
-				<div class="col col-span-5">
-
-					<img src="img/hilton.jpg" class="hotelImgOne">
-				</div>
-				<div class="col col-span-6">
-					<p class="hotelText">
-					<strong>Hilton Garden Inn Mayfaire Town Center</strong> <br>
-					$139 (2 night minimum) <br>
-					6745 Rock Spring Road, Wilmington, NC 28405<br>
-					910-509-4046 <br>
-					<nav class="cl-effect-8">
-						<a href="http://hiltongardeninn.hilton.com/en/gi/groups/personalized/I/ILMTCGI-SMITH-20171020/index.jhtml?WT.mc_id=POG" target="blank">link to site</a>
-						<a href="https://www.google.com/maps/place/6745+Rock+Spring+Rd,+Wilmington,+NC+28405/@34.2374163,-77.8348776,17z/data=!3m1!4b1!4m5!3m4!1s0x89a9f35ec919904d:0x5d558a8aad873838!8m2!3d34.2374119!4d-77.8326889" target="blank">link to directions</a>
-						<a href="#modal-two">More Info</a>
-<!-- Modal -->
-<div class="modal" id="modal-two" aria-hidden="true">
-<div class="modal-dialog">
-<div class="modal-header">
-<h2> Hilton Garden Inn Mayfaire Town Center</h2>
-<p><b>6745 Rock Spring Road, Wilmington, NC 28405</b></p>
-<p><b>910-509-4046</b></p>
-<a href="#anchor-3" class="btn-close" aria-hidden="true">×</a>
 </div>
-<div class="modal-body">
-<p>Room Rates: <br />
-$139 (2 night minimum)</p>
-
-<p> To make a reservation: Call 910-509-4046 and request the Smith-Kalmykov Wedding group block.<br />
-<p> The special room rate will be available until September 20th or until the group block is sold-out, whichever comes first.<br />
-<!-- <p>It's a 6 minute drive to Wrightsville Manor. Walking distance to lots of restaurants and shopping at Mayfaire Towne Center. 8 minute drive to Wrightsville Beach. <br /> -->
-</div>
-<div class="modal-footer">
-<a href="#anchor-3" class="btn backModal">back</a>
-</div>
-</div>
-<!-- end Modal -->
-
-						</nav>
-					<!-- </p> -->
-					</div>
-
-					</nav>
-				</p>
-				</div>
-				<a href="#anchor-4" onclick="smoothScroll('anchor-4');"><i id="anchor-3" class="fa fa-angle-double-down animated bounce"></i></a>
-
-				</div>
-
-
+<!-- END third hotel Hilton Garden Inn Mayfaire Town Center -->
 
 	</div>
 
